--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ div#__next,
 div#__next > div {
     padding: 0;
     margin: 0;
-    /* font-family: 'Lato', sans-serif; */
+    font-family: 'arimo', sans-serif;
 }
 
 a {
